metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/LeadConversionSetting__mdt.object-meta.xml
<CustomObject>
    <label>Lead Conversion Setting</label>
    <pluralLabel>Lead Conversion Settings</pluralLabel>
</CustomObject>