metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/EACompletedBy__c.field-meta.xml
<CustomField>
    <fullName>EACompletedBy__c</fullName>
    <label>EA Completed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>