metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/EACompletedOn__c.field-meta.xml
<CustomField>
    <fullName>EACompletedOn__c</fullName>
    <label>EA Completed On</label>
    <length>50</length>
    <type>Text</type>
</CustomField>