metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/EARuleId__c.field-meta.xml
<CustomField>
    <fullName>EARuleId__c</fullName>
    <label>EA Rule Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>