metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/LeadFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>LeadFieldAPIName__c</fullName>
    <label>Lead Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>