metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/LeadFieldValue__c.field-meta.xml
<CustomField>
    <fullName>LeadFieldValue__c</fullName>
    <label>Lead Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>