metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/LeadOutreachType__c.field-meta.xml
<CustomField>
    <fullName>LeadOutreachType__c</fullName>
    <label>Lead Outreach Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>product_enabled</fullName>
                <default>true</default>
                <label>product_enabled</label>
            </value>
            <value>
                <fullName>early_enrollment</fullName>
            </value>
            <value>
                <fullName>enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>