metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/LeadSecondaryFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>LeadSecondaryFieldAPIName__c</fullName>
    <label>Lead Secondary Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>