metadata-sfdx/force-app/main/default/objects/LeadConversionSetting__mdt/fields/LeadSecondaryFieldValue__c.field-meta.xml
<CustomField>
    <fullName>LeadSecondaryFieldValue__c</fullName>
    <label>Lead Secondary Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>